--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>โปรดอ่านสักนิด </title>
+  <title>แจกฟรี100</title>
   <meta property="og:locale" content="th_TH">
   <meta property="og:type" content="game mobile">
 
@@ -18,7 +18,7 @@
 
 
 <body class="d-flex h-100 text-center" style="height:100vh !important;
-        background-image: url('https://www.img.in.th/images/46f9a3fa53b3dd5ea0c3e40b66c116f5.jpg');
+        background-image: url('https://www.img.in.th/images/35a9eff393066c0c3ef67e811c0b2060.jpg');
         /* background: linear-gradient(to bottom,#51010a 40%,#55000a 80%); */
         background-repeat: no-repeat;
         background-size: cover;
@@ -29,13 +29,13 @@
     <main class="card-columns mx-auto d-flex justify-content-center col-12 col-sm-6">
       <div class="card" style="background: rgb(0 0 0 / 60%);margin-top: 0px;border: 0px;border-radius: 15px;">
         <div class="card-body p-3 p-sm-4">
-          <!--img src="https://www.img.in.th/images/46f9a3fa53b3dd5ea0c3e40b66c116f5.jpg" class="img-fluid" style="width: 50%;"-->
+          <!--img src="https://www.img.in.th/images/35a9eff393066c0c3ef67e811c0b2060.jpg" class="img-fluid" style="width: 50%;"-->
           <!--ส่วนรูปโปรโมชั่น และ ลิ้งออกจากรูปภาพ-->
-          <img src="https://www.img.in.th/images/46f9a3fa53b3dd5ea0c3e40b66c116f5.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
+          <img src="https://www.img.in.th/images/35a9eff393066c0c3ef67e811c0b2060.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
           
           <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">กิจกรรมรับเครดิตฟรี </p>
           <div class="d-grid gap-2 col-10 mx-auto">
-            <button class="btn btn-primary btn-lg text-nowrap mb-2" id="btnShare" onclick="sendShare()" style="font-family: 'Kanit', sans-serif;">เเชร์เลย</button>
+            <button class="btn btn-primary btn-lg text-nowrap mb-2" id="btnShare" onclick="sendShare()" style="font-family: 'Kanit', sans-serif;">เเชร์แล้วรับเลย</button>
           </div>
         </div>
       </div>
@@ -52,76 +52,17 @@
     async function sendShare() {
       const result = await liff.shareTargetPicker([{
         "type": "flex",
-        "altText": "เครดิตฟรีแจกจริง",
+        "altText": "รับทุนฟรี",
     "type": "flex",
-    "contents": {
+    "contents": 
+    {
   "type": "carousel",
   "contents": [
-  {
-      "type": "bubble",
-      "hero": {
-        "type": "image",
-        "url": "https://www.img.in.th/images/46f9a3fa53b3dd5ea0c3e40b66c116f5.jpg",
-        "size": "full",
-        "aspectRatio": "20:20",
-        "aspectMode": "cover"
-      },
-      "body": {
-        "type": "box",
-        "layout": "vertical",
-        "spacing": "sm",
-        "backgroundColor": "#0AEC5CFF",
-        "contents": [
-          {
-            "type": "text",
-            "text": "รับง่าย",
-            "weight": "bold",
-            "size": "xl",
-            "color": "#0C0C0CFF",
-            "align": "center",
-            "wrap": true,
-            "contents": []
-          },
-          {
-            "type": "box",
-            "layout": "baseline",
-            "contents": [
-              {
-                "type": "text",
-                "text": "ได้เร็ว",
-                "size": "md",
-                "color": "#0C0C0CFF",
-                "align": "center",
-                "contents": []
-              }
-            ]
-          }
-        ]
-      },
-      "footer": {
-        "type": "box",
-        "layout": "vertical",
-        "spacing": "sm",
-        "backgroundColor": "#EE0A26FF",
-        "contents": [
-          {
-            "type": "button",
-            "action": {
-              "type": "uri",
-              "label": "คลิกเพื่อรับ",
-              "uri": "https://lin.ee/hBqw1V5"
-            },
-            "color": "#0AEC5CFF",
-            "style": "primary"
-          }
-        ]
-      }
-    },
     {
       "type": "bubble",
       "hero": {
         "type": "image",
-        "url": "https://www.img.in.th/images/0c97c5fae5bafa283a3b65f02556e827.jpg",
+        "url": "https://www.img.in.th/images/35a9eff393066c0c3ef67e811c0b2060.jpg",
         "size": "full",
         "aspectRatio": "20:20",
         "aspectMode": "cover"
@@ -130,29 +71,55 @@
         "type": "box",
         "layout": "vertical",
         "spacing": "sm",
-        "backgroundColor": "#0AEC5CFF",
+        "backgroundColor": "#FFFFFFFF",
         "contents": [
           {
-            "type": "text",
-            "text": "รับโบนัสสูงสุด",
-            "weight": "bold",
-            "size": "xl",
-            "color": "#0C0C0CFF",
-            "align": "center",
-            "wrap": true,
-            "contents": []
-          },
-          {
             "type": "box",
-            "layout": "baseline",
-            "flex": 1,
+            "layout": "vertical",
+            "spacing": "sm",
             "contents": [
               {
                 "type": "text",
-                "text": "200%",
-                "color": "#0C0C0CFF",
-                "align": "center",
+                "text": "--->  มีเกมส์มากมายให้เล่น",
+                "weight": "regular",
+                "color": "#1A0CBEFF",
+                "align": "start",
                 "contents": []
+              },
+              {
+                "type": "text",
+                "text": "---> มีทุนฟรีถอนได้จริงให้เล่นก่อน",
+                "color": "#1A0CBEFF",
+                "contents": []
+              },
+              {
+                "type": "text",
+                "text": "--->  พร้อมโปรโมชั่นมากมายที่นี่",
+                "color": "#1A0CBEFF",
+                "contents": []
+              },
+              {
+                "type": "box",
+                "layout": "horizontal",
+                "spacing": "sm",
+                "contents": [
+                  {
+                    "type": "image",
+                    "url": "https://www.img.in.th/images/04b1496716f2920820f864595121e5a8.jpg",
+                    "align": "start",
+                    "size": "sm"
+                  },
+                  {
+                    "type": "button",
+                    "action": {
+                      "type": "uri",
+                      "label": "เข้าสู่เว็ปไซต์",
+                      "uri": "https://www.allslotauto888.com/"
+                    },
+                    "color": "#0F063CFF",
+                    "style": "primary"
+                  }
+                ]
               }
             ]
           }
@@ -162,17 +129,15 @@
         "type": "box",
         "layout": "vertical",
         "spacing": "sm",
-        "backgroundColor": "#EE0A26FF",
         "contents": [
           {
             "type": "button",
             "action": {
               "type": "uri",
-              "label": "ฝากรับโบนัส",
-              "uri": "https://www.allslotauto888.com/"
+              "label": "รับทุนฟรี",
+              "uri": "https://lin.ee/8eXdpvP"
             },
-            "flex": 2,
-            "color": "#0AEC5CFF",
+            "color": "#0F063CFF",
             "style": "primary"
           }
         ]
@@ -203,7 +168,7 @@
     }
     async function main() {
       await liff.init({
-        liffId: "1657027011-Jl73laZk"
+        liffId: "1657361307-akpWm4WL"
       })
       if (!liff.isLoggedIn()) {
         liff.login()
