--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
           <!--ส่วนรูปโปรโมชั่น และ ลิ้งออกจากรูปภาพ-->
           <img src="https://www.img.in.th/images/35a9eff393066c0c3ef67e811c0b2060.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
           
-          <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">กิจกรรมรับเครดิตฟรี </p>
+          <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">กด ส่งลง
+            (กลุ่ม Line 10 กลุ่มไลน์ สมาชิกขั้นต่ำ 200 คน) ถ้าไม่มีกลุ่มไลน์ให้ส่งให้เพื่อน 15 คนแล้วอย่าลืมแคปรูปให้แอดมินอิงฟ้าด้วยนะคะ </p>
           <div class="d-grid gap-2 col-10 mx-auto">
             <button class="btn btn-primary btn-lg text-nowrap mb-2" id="btnShare" onclick="sendShare()" style="font-family: 'Kanit', sans-serif;">เเชร์แล้วรับเลย</button>
           </div>
