--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>แจกฟรี100</title>
+  <title>รับฟรี</title>
   <meta property="og:locale" content="th_TH">
   <meta property="og:type" content="game mobile">
 
@@ -18,7 +18,7 @@
 
 
 <body class="d-flex h-100 text-center" style="height:100vh !important;
-        background-image: url('https://www.img.in.th/images/35a9eff393066c0c3ef67e811c0b2060.jpg');
+        background-image: url('https://sv1.picz.in.th/images/2022/10/22/v4gblv.jpg');
         /* background: linear-gradient(to bottom,#51010a 40%,#55000a 80%); */
         background-repeat: no-repeat;
         background-size: cover;
@@ -29,9 +29,9 @@
     <main class="card-columns mx-auto d-flex justify-content-center col-12 col-sm-6">
       <div class="card" style="background: rgb(0 0 0 / 60%);margin-top: 0px;border: 0px;border-radius: 15px;">
         <div class="card-body p-3 p-sm-4">
-          <!--img src="https://www.img.in.th/images/35a9eff393066c0c3ef67e811c0b2060.jpg" class="img-fluid" style="width: 50%;"-->
+          <!--img src="https://sv1.picz.in.th/images/2022/10/22/v4gblv.jpg" class="img-fluid" style="width: 50%;"-->
           <!--ส่วนรูปโปรโมชั่น และ ลิ้งออกจากรูปภาพ-->
-          <img src="https://www.img.in.th/images/35a9eff393066c0c3ef67e811c0b2060.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
+          <img src="https://sv1.picz.in.th/images/2022/10/22/v4gblv.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
           
           <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">กด ส่งลง
             (กลุ่ม Line 10 กลุ่มไลน์ สมาชิกขั้นต่ำ 200 คน) ถ้าไม่มีกลุ่มไลน์ให้ส่งให้เพื่อน 15 คนแล้วอย่าลืมแคปรูปให้แอดมินอิงฟ้าด้วยนะคะ </p>
@@ -63,7 +63,7 @@
       "type": "bubble",
       "hero": {
         "type": "image",
-        "url": "https://www.img.in.th/images/35a9eff393066c0c3ef67e811c0b2060.jpg",
+        "url": "https://sv1.picz.in.th/images/2022/10/22/v4gblv.jpg",
         "size": "full",
         "aspectRatio": "20:20",
         "aspectMode": "cover"
@@ -106,7 +106,7 @@
                 "contents": [
                   {
                     "type": "image",
-                    "url": "https://www.img.in.th/images/04b1496716f2920820f864595121e5a8.jpg",
+                    "url": "https://sv1.picz.in.th/images/2022/10/22/v4gofN.jpg",
                     "align": "start",
                     "size": "sm"
                   },
